fix return text going outside of output box using word-wrap.

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,5 +48,7 @@ button {
 }
 #output {
   text-align: auto;
-  padding: 10%;
+  height: 10px;
+  padding: 10%; 
+  word-wrap: break-word;
 }
